@@ -1,3 +1,8 @@
+2008-05-26  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
+	* tests/check/libs/video.c:
+	  More checks.
+
 2008-05-25  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* gst/subparse/gstsubparse.c: (parser_state_init),
